[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maze-solver"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vidyasagar0405/maze-solver#readme"
Issues = "https://github.com/vidyasagar0405/maze-solver/issues"
Source = "https://github.com/vidyasagar0405/maze-solver"

[tool.hatch.version]
path = "src/maze_solver/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/maze_solver tests}"

[tool.coverage.run]
source_pkgs = ["maze_solver", "tests"]
branch = true
parallel = true
omit = [
  "src/maze_solver/__about__.py",
]

[tool.coverage.paths]
maze_solver = ["src/maze_solver", "*/maze-solver/src/maze_solver"]
tests = ["tests", "*/maze-solver/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
